# polkadot-bulletin-chain

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check.yml
examples/: README.md  api.js  authorize_and_store.js  authorize_and_store_papi.js  common.js  package.json  store_big_data.js
node/src/: fake_runtime_api.rs
pallets/transaction-storage/src/: lib.rs  tests.rs
runtime/src/: lib.rs
runtimes/bulletin-polkadot/src/: lib.rs
runtimes/bulletin-polkadot/tests/: tests.rs
runtimes/bulletin-westend/: Cargo.toml
runtimes/bulletin-westend/src/: genesis_config_presets.rs  lib.rs  storage.rs  xcm_config.rs
runtimes/bulletin-westend/src/weights/: mod.rs  pallet_transaction_storage.rs
runtimes/bulletin-westend/src/weights/xcm/: mod.rs
runtimes/bulletin-westend/tests/: tests.rs
scripts/: create_bulletin_westend_spec.sh  ipfs-reconnect-solo.sh  ipfs-reconnect-westend.sh  runtimes-matrix.json
zombienet/: bulletin-polkadot-local.toml  bulletin-westend-local.toml
