[workspace.package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
repository = "https://github.com/zdave-parity/polkadot-bulletin-chain.git"

[workspace.dependencies]
array-bytes = { version = "6.1" }
bp-test-utils = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75" }
cfg-if = { version = "1.0" }
clap = { version = "4.2.5" }
codec = { package = "parity-scale-codec", version = "3.7.5", default-features = false }
cumulus-pallet-aura-ext = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
cumulus-pallet-session-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
cumulus-pallet-weight-reclaim = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
cumulus-primitives-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
futures = { version = "0.3.21" }
hex = { version = "0.4" }
jsonrpsee = { version = "0.24.3" }
log = { version = "0.4.17", default-features = false }
parachain-info = { git = "https://github.com/paritytech/polkadot-sdk.git", package = "staging-parachain-info", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
polkadot-parachain-primitives = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
scale-info = { version = "2.11.6", default-features = false }
serde = { version = "1.0.126" }
serde_json = { version = "1.0.132", default-features = false }
static_assertions = { version = "1.1" }
testnet-parachains-constants = { git = "https://github.com/paritytech/polkadot-sdk.git", package = "testnet-parachains-constants", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
tracing = { version = "0.1.41", default-features = false }
westend-runtime-constants = { git = "https://github.com/paritytech/polkadot-sdk.git", package = "westend-runtime-constants", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }

# Local workspace members
bulletin-polkadot-runtime = { path = "runtimes/bulletin-polkadot" }
bulletin-westend-runtime = { path = "runtimes/bulletin-westend" }
pallet-relayer-set = { path = "pallets/relayer-set", default-features = false }
pallet-transaction-storage = { path = "pallets/transaction-storage", default-features = false }
pallet-validator-set = { path = "pallets/validator-set", default-features = false }
pallets-common = { path = "pallets/common", default-features = false }
polkadot-bulletin-chain-runtime = { path = "runtime" }

# Polkadot SDK crates (shared git revision)
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
polkadot-sdk-frame = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }

sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75" }
sc-consensus-babe = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75" }
sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75" }
sc-consensus-grandpa-rpc = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75" }

sp-api = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
sp-consensus-babe = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
sp-storage = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
sp-tracing = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
sp-transaction-storage-proof = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
sp-trie = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
sp-weights = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }

pallet-authorship = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
pallet-babe = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
pallet-offences = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
pallet-session = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }

bp-bridge-hub-cumulus = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
bp-bridge-hub-rococo = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
bp-header-chain = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
bp-messages = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
bp-parachains = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
# TODO: remove this and replace with local runtime/src/bridge-primitives
bp-polkadot-bulletin = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
bp-polkadot-core = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
bp-rococo = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
bp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
bridge-runtime-common = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }

pallet-bridge-grandpa = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
pallet-bridge-messages = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
pallet-bridge-parachains = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
pallet-bridge-relayers = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
pallet-xcm-bridge-hub = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }

pallet-staking = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
sp-staking = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
xcm = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", package = "staging-xcm", default-features = false }
xcm-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", package = "staging-xcm-builder", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", package = "staging-xcm-executor", default-features = false }

# Parachains common primitives (needed by runtimes)
parachains-common = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }

# Runtime metadata hash extension
frame-metadata-hash-extension = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }

# Polkadot runtime common utilities
parachains-runtimes-test-utils = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = true }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
xcm-runtime-apis = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }

# Additional FRAME pallets used by westend runtime
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
pallet-collator-selection = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
pallet-message-queue = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }
pallet-xcm-benchmarks = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75", default-features = false }

# Substrate tooling
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75" }
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "41bc46f27067c243d1c0fb7f83260d61c1f97c75" }

[workspace]
resolver = "2"
members = [
	"node",
	"pallets/common",
	"pallets/relayer-set",
	"pallets/transaction-storage",
	"pallets/validator-set",
	"runtime",
	"runtimes/bulletin-polkadot",
	"runtimes/bulletin-westend",
]
[profile.release]
# Polkadot runtime requires unwinding.
opt-level = 3
panic = "unwind"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1
